--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>cryptoprice</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://arrowgtr.github.io/cryptoprice/css/styles.css">
-    <link rel="stylesheet" href="https://arrowgtr.github.io/cryptoprice/css/loginform.css">
-    <link rel="stylesheet" href="https://arrowgtr.github.io/cryptoprice/css/signupform.css">
-    <link rel="stylesheet" href="Forum.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CSS -->
 </head>
 <body>
@@ -16,22 +13,9 @@
     <nav class="header-nav">
         <ul>
             <li><a href="https://arrowgtr.github.io/cryptoprice/index.html">Home</a></li>
-            <li><a href="https://arrowgtr.github.io/cryptoprice/News/News.html">News</a></li>
-            <li><a href="https://arrowgtr.github.io/cryptoprice/Guides/GUIDES.html">Guides</a></li>
-            <li><a href="https://arrowgtr.github.io/cryptoprice/Forum/Forum.html">Forum</a></li>
         </ul>
     </nav>
 </header>
-
-<table id="E"> </table>
-<table id="apiKeyTable">
-    <tr>
-        <th>CMC API KEYS</th>
-        <th>Username</th>
-        <th><button class="addnew" onclick="addNewRow()">Add New</button></th>
-    </tr>
-</table>
-
 
 
 
@@ -39,11 +23,9 @@
 <nav class="footer-nav">
     <ul>
         <li><a href="#">About</a></li>
-        <li><a href="#">Guides</a></li>
-        <li><a href="#">Forum</a></li>
     </ul>
 </nav>
-<p>&copy; 2024 Crypto Hub. All rights reserved.</p>
+<p>&copy; 2024 ΡΑΒΕ ΞΖΛΩΝΕ ΜΑΡΟΥΣΙ</p>
 </footer>
 
 <script src="Forum.js"></script>
