--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class="header">
     <nav class="header-nav">
         <ul>
-            <li> <a href="https://arrowgtr.github.io/cryptoprice/index.html">Επικοινωνήστε Μαζί μας</a></li>
+            <li> <a href="https://arrowgtr.github.io//rabeksylwne/blob/rabeksylwne/index.html">Επικοινωνήστε Μαζί μας</a></li>
         </ul>
     </nav>
 </header>
