--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ΡΑΒΕ ΞΥΛΩΝΕ ΜΑΡΟΥΣΙ</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://arrowgtr.github.io/rabeksylwne/blob/rabeksylwne/style.css">
+    <link rel="stylesheet" href="https://github.dev/arrowgtr/rabeksylwne/blob/rabeksylwne/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CSS -->
 </head>
 <body>
@@ -17,8 +17,6 @@
     </nav>
 </header>
 
-
-
 <footer>
 <nav class="footer-nav">
     <ul>
@@ -27,7 +25,6 @@
 </nav>
 <p>&copy; 2024 ΡΑΒΕ ΞΥΛΩΝΕ ΜΑΡΟΥΣΙ</p>
 </footer>
-
 
 </body>
 </html>
